--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1553,6 +1553,7 @@ template {
 
 .fa-bars::before {
   content: "";
+  background: #fff;
 }
 
 .fa-navicon::before {
@@ -24344,8 +24345,8 @@ header .onhover-dropdown .onhover-div-login .user-box-name li a::after {
   content: "";
   position: absolute;
   width: 0;
-  height: 4px;
-  bottom: 2px;
+  height: 1px;
+  bottom: -2px;
   left: 0;
   background-color: var(--theme-color);
   opacity: 0.3;
@@ -33156,7 +33157,7 @@ body.rtl .menu-label {
 }
 
 .category-menu {
-  background-color: #f8f8f8;
+  background-color: #f8f8f8e8;
   padding: calc(12px + 21 * (100vw - 320px) / 1600);
   border-radius: 5px;
 }
@@ -33193,8 +33194,7 @@ body.rtl .menu-label {
   display: flex;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
-  gap: 23px;
-  border-bottom: 1px dashed rgba(74, 85, 104, 0.5);
+  gap: 15px;
 }
 
 .category-menu ul.value-list {
