--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -23,6 +23,9 @@
   .product-top-desc::after {
     display: none;
   }
+  header .navbar.navbar-expand-xl .navbar-nav .nav-item a {
+    font-size: 18px !important;
+  }
 }
 
 .slick-prev,
